Syncing PronogoMod Changes
Converting the non-Github version of the PronogoMod (based on teippi) to
a Github version, as a fork of teippi.

--- a/teippi.vcxproj
+++ b/teippi.vcxproj
@@ -163,6 +163,7 @@
     <ProjectGuid>{E4F0C53F-8541-4895-9050-EA38F8874F96}</ProjectGuid>
     <Keyword>MakeFileProj</Keyword>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <ProjectName>Teippi_PronogoMod</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
