--- a/Teippi.vcxproj.filters
+++ b/Teippi.vcxproj.filters
@@ -279,6 +279,9 @@
     <ClInclude Include="src\ai_hit_reactions.h">
       <Filter>Headers</Filter>
     </ClInclude>
+    <ClInclude Include="src\custom_timers.h">
+      <Filter>Sources</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\ai.cpp">
@@ -438,6 +441,9 @@
       <Filter>Sources</Filter>
     </ClCompile>
     <ClCompile Include="src\ai_hit_reactions.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="src\custom_timers.cpp">
       <Filter>Sources</Filter>
     </ClCompile>
   </ItemGroup>
